style: Fix the issue where the title is being covered by the header above when scrolling with #fragment.
- Add scroll-padding-top to html element

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
-
-/* Bootswatch - Pulse
-   https://bootswatch.com/
-*/
 @import 'variables';
 @import 'bootstrap/scss/bootstrap';
 @import 'ngx-toastr/toastr';
-// @import 'bootswatch';
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 // @import 'tocbot/src/scss/tocbot';
+
+html{
+  scroll-padding-top: 63px;
+}
 
 :root {
   --bs-primary: #000000;
